--- a/.htaccess
+++ b/.htaccess
@@ -1,8 +1,10 @@
+//josh
 <IfModule mod_rewrite.c>
     RewriteEngine On
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteRule ^(.*)$ /Grab/index.php/$1 [L]
+    //jaka
 </IfModule>
 <IfModule !mod_rewrite.c>
     ErrorDocument 404 /Grab/index.php
