--- a/.htaccess
+++ b/.htaccess
@@ -4,8 +4,10 @@
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteRule ^(.*)$ /Grab/index.php/$1 [L]
-    //jaka
+    //jaka   jaka
 </IfModule>
 <IfModule !mod_rewrite.c>
     ErrorDocument 404 /Grab/index.php
 </IfModule>
+
+//king
